RESOLVED FIXED40722
User scripts injected on start are not run on image documents
https://bugs.webkit.org/show_bug.cgi?id=40722
Summary User scripts injected on start are not run on image documents
Brian Weinstein
Reported 2010-06-16 10:59:30 PDT
User scripts injected on start are not run on image documents.
Attachments
[PATCH] Fix (1.56 KB, patch)
2010-06-16 11:06 PDT, Brian Weinstein
darin: review+
bweinstein: commit-queue-
Brian Weinstein
Comment 1 2010-06-16 11:00:02 PDT
Brian Weinstein
Comment 2 2010-06-16 11:06:17 PDT
Created attachment 58906 [details] [PATCH] Fix
Darin Adler
Comment 3 2010-06-16 11:11:17 PDT
Comment on attachment 58906 [details] [PATCH] Fix This looks OK. Is there any way to share more code with the normal document loading code path?
Brian Weinstein
Comment 4 2010-06-16 12:01:58 PDT
Landed in r61271.
Note You need to log in before you can comment on or make changes to this bug.