User scripts injected on start are not run on image documents. https://bugs.webkit.org/show_bug.cgi?id=40722 <rdar://8087394>

Reviewed by Darin Adler.

User scripts that are injected on start are run from FrameLoader::dispatchDocumentElementAvailable,
but this is never called from ImageDocument, so call it when we create a document element for
our image document.

* loader/ImageDocument.cpp:
(WebCore::ImageDocument::createDocumentStructure): Call FrameLoader::dispatchDocumentElementAvailable
    after creating our document element.



Canonical link: https://commits.webkit.org/52281@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61271 268f45cc-cd09-0410-ab3c-d52691b4dbfc